--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.12.0",
     "mongoose": "^5.13.0",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "stripe": "^8.170.0"
   }
 }
