--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION=mongodb+srv://alej_mernu:Janomn_4@cluster0.v7njn.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://palcosplus:Palcosplus.10@palcosplus.bsm72.mongodb.net/PalcosPLusDataBase?retryWrites=true&w=majority
