--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.13.0",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "stripe": "^8.174.0"
   }
 }
