update mongodb conn

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB_CONNECTION=mongodb+srv://palcosplus:Palcosplus.10@palcosplus.bsm72.mongodb.net/PalcosPLusDataBase?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://palcosplus:Palcosplus.10@cluster0.bsm72.mongodb.net/PalcosPlusDataBase?retryWrites=true&w=majority
+NODE_ENV=production
+PORT=5000
