--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1016.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dependencies": "0.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.9",
     "stripe": "^8.174.0"
   }
