--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.13.0",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.3",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.9",
